@@ -32,3 +32,5 @@ NJ - 09/10/04 - RELEASE - 0.1.0
 NJ - 09/10/04 - Tag to /framework/tags/REL-0.1.0
 NJ - 09/10/04 - Added a temporary README
 NJ - 09/10/04 - Made REALNAME set by default to fix bug #2613 (Invalid IRC Parameters)
+NJ - 10/10/04 - Made irclogin() much more simple
+NJ - 10/10/04 - Added sendnickserv() so users can have their bot automatically identify to nickserv
